Add optional role ping feature and update documentation

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CHANNEL_ID=your_channel_id_here
 DISCORD_GUILD_ID=your_guild_id_here
+# Optionally, you can add a role ID to ping
+DISCORD_PING_ROLE_ID=your_role_id_here
 
 # Google Sheets Configuration
 GOOGLE_SHEET_ID=your_google_sheet_id_here
