Add configurable reminder timing with REMINDER_HOURS_BEFORE environment variable and normalize date formatting in reminder messages

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ GOOGLE_CREDENTIALS_PATH=./credentials.json
 # Scheduling Configuration
 DAILY_POST_TIME=10:00
 TIMEZONE=Europe/Berlin
+REMINDER_HOURS_BEFORE=3
