--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "googleapis": "^170.0.0",
+    "ical-generator": "^10.0.0",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
