--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,19 @@ GOOGLE_SHEET_ID=your_google_sheet_id_here
 GOOGLE_CREDENTIALS_PATH=./credentials.json
 
 # Scheduling Configuration
-DAILY_POST_TIME=10:00
-TIMEZONE=Europe/Berlin
+DAILY_POST_TIME=12:00
+
+# TIMEZONE: IANA timezone string - this is the timezone used in your Google Sheet
+# All times in the sheet should be in this timezone
+# Common timezones:
+#   Europe/London    - UK (GMT/BST)
+#   Europe/Berlin    - Germany (CET/CEST)
+#   Europe/Paris     - France (CET/CEST)
+#   America/New_York - US East Coast (EST/EDT)
+#   America/Los_Angeles - US West Coast (PST/PDT)
+#   Asia/Tokyo       - Japan (JST)
+# Full list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+TIMEZONE=Europe/London
+
+# Hours before daily post to send reminders
 REMINDER_HOURS_BEFORE=3
