--- a/settings.example.json
+++ b/settings.example.json
@@ -1,7 +1,12 @@
 {
+  "discord": {
+    "channelId": "your_channel_id_here",
+    "pingRoleId": "your_role_id_here"
+  },
   "scheduling": {
     "dailyPostTime": "12:00",
     "reminderHoursBefore": 3,
-    "trainingStartPollEnabled": false
+    "trainingStartPollEnabled": false,
+    "timezone": "Europe/Berlin"
   }
 }
