--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "cors": "^2.8.5",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "googleapis": "^170.0.0",
     "ical-generator": "^10.0.0",
     "node-cron": "^4.2.1"
