feat: add API endpoint to fetch settings and improve error handling in settings loading

--- a/settings.example.json
+++ b/settings.example.json
@@ -8,5 +8,9 @@
     "reminderHoursBefore": 3,
     "trainingStartPollEnabled": false,
     "timezone": "Europe/Berlin"
+  },
+  "admin": {
+    "username": "admin",
+    "password": "admin"
   }
 }
