feat: add clean channel option before posting schedule and update settings handling

--- a/settings.example.json
+++ b/settings.example.json
@@ -7,7 +7,8 @@
     "dailyPostTime": "12:00",
     "reminderHoursBefore": 3,
     "trainingStartPollEnabled": false,
-    "timezone": "Europe/Berlin"
+    "timezone": "Europe/Berlin",
+    "cleanChannelBeforePost": false
   },
   "admin": {
     "username": "admin",
