feat: migrate settings to Google Sheets
- Move discord & scheduling settings to Google Sheets (new Settings tab)
- Move admin credentials to .env for better security
- Add getSettingsFromSheet() and saveSettingsToSheet() functions
- Update settingsManager to use async Google Sheets API
- Update config.ts to read admin from .env
- Update apiServer.ts to handle async settings operations
- Update dashboard types to make admin optional
- Add automatic migration from settings.json to Google Sheet
- Add MIGRATION.md with detailed migration instructions
- Update .env.example with new admin fields

BREAKING CHANGE: settings.json is now deprecated in favor of Google Sheets.
Admin credentials must be set in .env (ADMIN_USERNAME, ADMIN_PASSWORD).

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ DISCORD_GUILD_ID=your_guild_id_here
 # Google Sheets Configuration
 GOOGLE_SHEET_ID=your_google_sheet_id_here
 GOOGLE_CREDENTIALS_PATH=./credentials.json
+
+# Admin Dashboard Credentials
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=change_this_password
