feat: implement Discord OAuth authentication flow and settings

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,13 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_GUILD_ID=your_guild_id_here
 
+# Discord OAuth Configuration (optional - for user authentication)
+# Get these from https://discord.com/developers/applications
+# Redirect URI should be: https://your-dashboard-url.com/auth/callback
+DISCORD_CLIENT_ID=your_discord_client_id_here
+DISCORD_CLIENT_SECRET=your_discord_client_secret_here
+DISCORD_REDIRECT_URI=http://localhost:3000/auth/callback
+
 # Google Sheets Configuration
 GOOGLE_SHEET_ID=your_google_sheet_id_here
 GOOGLE_CREDENTIALS_PATH=./credentials.json
