--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,11 @@ GOOGLE_CREDENTIALS_PATH=./credentials.json
 
 # Admin Dashboard Credentials
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=change_this_password
+ADMIN_PASSWORD_HASH=your_bcrypt_hash_here
+# Run: node dist/generateHash.js YOUR_PASSWORD to generate hash
+
+# JWT Secret (generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+JWT_SECRET=your_jwt_secret_here_min_32_chars
+
+# Dashboard URL (for CORS)
+DASHBOARD_URL=http://localhost:3000
