--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "googleapis": "^170.0.0",
+    "helmet": "^8.1.0",
     "ical-generator": "^10.0.0",
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.8",
     "@types/node-cron": "^3.0.11",
     "typescript": "^5.9.3"
