--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
+    "import": "node dist/importFromExcel.js",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -36,14 +37,16 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.0.8",
+    "@types/node": "^25.0.10",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.10",
+    "@types/xlsx": "^0.0.35",
     "prisma": "6.2.0",
     "typescript": "^5.9.3"
   }
