--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,8 @@ DATABASE_URL="postgresql://schedule_bot_user:your_password@localhost:5432/schedu
 # Admin Dashboard Credentials
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD_HASH=your_bcrypt_hash_here
-# Run: node dist/generateHash.js YOUR_PASSWORD to generate hash
+PASSWORD_SALT=your_password_salt_here
+# Generate salt and hash in Admin Dashboard > Security tab
 
 # JWT Secret (generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
 JWT_SECRET=your_jwt_secret_here_min_32_chars
