--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   },
   "homepage": "https://github.com/jonax1337/Schedule-Bot#readme",
   "dependencies": {
-    "@notionhq/client": "^2.3.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@types/cors": "^2.8.19",
@@ -53,6 +52,7 @@
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.13.1",
     "prisma": "^7.3.0",
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.10",
